# many-buildroots

./: .gitignore  AGENTS.md  README.md  arch-buildroot-options.conf  architectures.conf  build-gdb.sh  build-tool  buildroot-fragment.conf  external-toolchains.conf  pyproject.toml
build_tool/: __init__.py  cli.py
