[tool.poetry]
name = "build-tool"
version = "0.1.0"
description = "Build tool for Buildroot toolchains and GDB"
authors = ["Simon Marchi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.3.0"
rich = "^14.2.0"

[tool.poetry.scripts]
build-tool = "build_tool.cli:main"

[tool.poetry.group.dev.dependencies]
black = "^25.11.0"
isort = "^7.0.0"
flake8 = "^7.3.0"
pyright = "^1.1.407"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.10"
include = ["build_tool"]
reportMissingTypeStubs = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportMissingParameterType = false
